# clambot

./: CHANGELOG.md  README.md  config.example.json  pyproject.toml
clambot/agent/: context.py  loop.py  selector.py
clambot/cli/: commands.py
clambot/config/: schema.py
clambot/providers/: factory.py  openai_codex_provider.py
clambot/tools/: __init__.py
clambot/tools/web/: __init__.py  search.py
tests/: test_onboarding.py  test_providers.py  test_tools.py  test_web_search.py
tests/integration/: test_cron_integration.py
